--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,13 +1,16 @@
 name: facebook_login_example
 description: Demonstrates how to use the facebook_login plugin.
 
+environment:
+  sdk: '>=3.1.0 <4.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.0
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
